--- a/Interaction project/index.html
+++ b/Interaction project/index.html
@@ -18,7 +18,15 @@
                     <div class="line three"></div>
                 </div>
 
-                <div class="logo"> <h1 class="logosmall">Pharm inc.</h1> <h1 class="logobig">Pharmacutical inc.</h1> </div>
+								<div class="logo">
+				          <h1 class="logosmall">
+				            <a href="index.html">Pharm inc.</a>
+				          </h1>
+				          <h1 class="logobig">
+				            <a href="index.html">Pharmacutical inc.</a>
+				          </h1>
+				        </div>
+
                 <a href="#" class="login-button button">
                         <p>Login</p>
                </a>
@@ -91,7 +99,7 @@
         </header>
         <main class="maincontent">
             <div class="banner">
-                <a href="#" class=" register button">
+                <a href="register.html" class=" register-frontPage button">
                     <p>Register</p>
                 </a>
 
