--- a/Interaction project/education.html
+++ b/Interaction project/education.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Pharmacutical inc.</title>
 		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,600i,700|Open+Sans:400,400i,600,700" rel="stylesheet">
 		<link href="css/main.css" type="text/css" rel="stylesheet" />
         <script src="js/jquery-3.2.1.min.js"></script>
@@ -18,7 +19,14 @@
 								<div class="line three"></div>
 						</div>
 
-						<div class="logo"> <h1 class="logosmall"><a href="index.html">Pharm inc.</a></h1> <h1 class="logobig"><a href="index.html">Pharmacutical inc.</a></h1> </div>
+						<div class="logo">
+		          <h1 class="logosmall">
+		            <a href="index.html">Pharm inc.</a>
+		          </h1>
+		          <h1 class="logobig">
+		            <a href="index.html">Pharmacutical inc.</a>
+		          </h1>
+		        </div>
 						<a href="" class="login-button button">
 										<p>Login</p>
 					 </a>
