--- a/Interaction project/index2.html
+++ b/Interaction project/index2.html
@@ -27,9 +27,9 @@
 				          </h1>
 				        </div>
 
-                <a href="#" class="login-button button">
-                        <p>Login</p>
-               </a>
+               <div class="profile-img">
+                   <img src="img/profile.png" alt="">
+               </div>
 
                <div class="basket">
                    <img src="img/basket.png" alt="">
@@ -105,7 +105,7 @@
 
             </div>
 
-            <div class="startContent">
+             <div class="startContent">
                <div class="start-box">
                    <div class="innerbox">
                         <h2>Content 1</h2>
@@ -131,6 +131,7 @@
                 <a href="#" class=" newsLetter button"> <p>Sign up for Newsletter</p></a>
             </div>
 
+<!--
 						<div class="cookie-overflow">
 							<div class="cookie-box">
 				        <div class="cookie-1">
@@ -140,6 +141,7 @@
 				        </div>
 							</div>
 						</div>
+-->
 
         </main>
         <footer>
