--- a/Interaction project/register.html
+++ b/Interaction project/register.html
@@ -193,7 +193,7 @@
             <div class="form-box">
               <div class="progressbar probar3"></div>
               <h3 class="now_registered">You are now registered!</h3>
-              <a href="index.html" class="go_to_home button">Go to Home page</a>
+              <a href="index2.html" class="go_to_home button">Go to Home page</a>
               <a href="#"class="go_to_profile button">Go to your profile</a>
             </div>
           </div>
