--- a/Interaction project/education.html
+++ b/Interaction project/education.html
@@ -11,92 +11,93 @@
 				<!--<script src="js/education.js"></script>-->
 	</head>
 	<body onload="notification();">
-		<header>
-				<div class="menu">
-						<div class="hamburger">
-								<div class="line one"></div>
-								<div class="line two"></div>
-								<div class="line three"></div>
-						</div>
+        <header>
+            <div class="menu">
+                <div class="hamburger">
+                    <div class="line one"></div>
+                    <div class="line two"></div>
+                    <div class="line three"></div>
+                </div>
 
-						<div class="logo">
-		          <h1 class="logosmall">
-		            <a href="index.html">Pharm inc.</a>
-		          </h1>
-		          <h1 class="logobig">
-		            <a href="index.html">Pharmacutical inc.</a>
-		          </h1>
-		        </div>
-						<a href="" class="login-button button">
-										<p>Login</p>
-					 </a>
+				<div class="logo">
+                      <h1 class="logosmall">
+                        <a href="index2.html">Pharm inc.</a>
+                      </h1>
+                      <h1 class="logobig">
+                        <a href="index2.html">Pharmacutical inc.</a>
+                      </h1>
+				    </div>
 
-					 <div class="basket">
-							 <img src="img/basket.png" alt="">
-					 </div>
-						<nav>
-								<ul class="main-menu">
-										<li>Products <img src="img/menu-arrow.png" class="menu-arrow" alt="">
-												<ul class="submenu">
-														<li><a href="" tabindex="-1">All products</a></li>
-														<li><a href="" tabindex="-1">Cardio Vascular</a></li>
-														<li><a href="" tabindex="-1">Respiratory</a></li>
-														<li><a href="" tabindex="-1">Diabetes</a></li>
-														<li><a href="" tabindex="-1">Oncology</a></li>
-												</ul>
-										</li>
-										<li>Education <img src="img/menu-arrow.png" class="menu-arrow" alt="">
-												<ul class="submenu">
-														<li><a href="" tabindex="-1">Medical Educations</a></li>
-														<li><a href="education.html" tabindex="-1">E-learning</a> </li>
-														<li><a href="" tabindex="-1">Educational videos</a></li>
-														<li><a href="" tabindex="-1">Educational slides</a></li>
-														<li><a href="" tabindex="-1">Educational forum</a></li>
-												</ul>
-										</li>
-										<li>Therapy areas <img src="img/menu-arrow.png" class="menu-arrow" alt="">
-												<ul class="submenu">
-														<li><a href="">Oncology</a></li>
-														<li><a href="">Diabetes</a></li>
-														<li><a href="">Respiratory</a></li>
-														<li><a href="">Cardio Vascular</a></li>
-												</ul>
-										</li>
-										<li>Free patient material <img src="img/menu-arrow.png" class="menu-arrow" alt="">
-												<ul class="submenu">
-														<li><a href="">Order Materials</a></li>
-												</ul>
-										</li>
-										<li>News and events <img src="img/menu-arrow.png" class="menu-arrow" alt="">
-												<ul class="submenu">
-														<li><a href="">Science</a></li>
-														<li><a href="">Network</a></li>
-														<li><a href="">Newsletter</a></li>
-												</ul>
-										</li>
-										<li>Contact & information <img src="img/menu-arrow.png" class="menu-arrow" alt="">
-												<ul class="submenu">
-														<li><a href="">Contact form</a></li>
-														<li><a href="">Customer service</a></li>
-														<li><a href="">FAQ</a></li>
-												</ul>
-										</li>
-										<li>About<img src="img/menu-arrow.png" class="menu-arrow" alt="">
-												<ul class="submenu">
-														<li><a href="">About pharm inc.</a></li>
-														<li><a href="">Collaborations</a></li>
-														<li><a href="">Sustainability</a></li>
-														<li><a href="">Board & Management</a></li>
-														<li><a href="">Press material</a></li>
-												</ul>
-										</li>
-										<li>Search<img class="search-icon" src="img/search.png" alt=""></li>
-								</ul>
-						</nav>
+               <div class="profile-img">
+                   <img src="img/profile.png" alt="">
+               </div>
 
-				</div>
-				<hr>
-		</header>
+               <div class="basket">
+                   <img src="img/basket.png" alt="">
+               </div>
+                <nav>
+                    <ul class="main-menu">
+                        <li>Products <img src="img/menu-arrow.png" class="menu-arrow" alt="">
+                            <ul class="submenu">
+                                <li><a href=""  >All products</a></li>
+                                <li><a href=""  >Cardio Vascular</a></li>
+                                <li><a href=""  >Respiratory</a></li>
+                                <li><a href=""  >Diabetes</a></li>
+                                <li><a href=""  >Oncology</a></li>
+                            </ul>
+                        </li>
+                        <li>Education <img src="img/menu-arrow.png" class="menu-arrow" alt="">
+                            <ul class="submenu">
+                                <li><a href="">Medical Educations</a></li>
+                                <li class="education-link"><a href="education.html">E-learning</a> </li>
+                                <li><a href=""  >Educational videos</a></li>
+                                <li><a href=""  >Educational slides</a></li>
+                                <li><a href=""  >Educational forum</a></li>
+                            </ul>
+                        </li>
+                        <li>Therapy areas <img src="img/menu-arrow.png" class="menu-arrow" alt="">
+                            <ul class="submenu">
+                                <li><a href="">Oncology</a></li>
+                                <li><a href="">Diabetes</a></li>
+                                <li><a href="">Respiratory</a></li>
+                                <li><a href="">Cardio Vascular</a></li>
+                            </ul>
+                        </li>
+                        <li>Free patient material <img src="img/menu-arrow.png" class="menu-arrow" alt="">
+                            <ul class="submenu">
+                                <li><a href="">Order Materials</a></li>
+                            </ul>
+                        </li>
+                        <li>News and events <img src="img/menu-arrow.png" class="menu-arrow" alt="">
+                            <ul class="submenu">
+                                <li><a href="">Science</a></li>
+                                <li><a href="">Network</a></li>
+                                <li><a href="">Newsletter</a></li>
+                            </ul>
+                        </li>
+                        <li>Contact & information <img src="img/menu-arrow.png" class="menu-arrow" alt="">
+                            <ul class="submenu">
+                                <li><a href="">Contact form</a></li>
+                                <li><a href="">Customer service</a></li>
+                                <li><a href="">FAQ</a></li>
+                            </ul>
+                        </li>
+                        <li>About<img src="img/menu-arrow.png" class="menu-arrow" alt="">
+                            <ul class="submenu">
+                                <li><a href="">About pharm inc.</a></li>
+                                <li><a href="">Collaborations</a></li>
+                                <li><a href="">Sustainability</a></li>
+                                <li><a href="">Board & Management</a></li>
+                                <li><a href="">Press material</a></li>
+                            </ul>
+                        </li>
+                        <li>Search<img class="search-icon" src="img/search.png" alt=""></li>
+                    </ul>
+                </nav>
+
+            </div>
+            <hr>
+        </header>
 
         <main>
           <div class="breadcrumb">
