--- a/Interaction project/register.html
+++ b/Interaction project/register.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
@@ -26,7 +26,8 @@
       <!-- Register info -->
       <div class="registerinfo">
         <h2>Register</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>To register on Pharmaceutical inc. we are going to need your personal information. This information will be used to validate you in our database. Your information will not be used in any commercial purposes or be passed on to other parties. By registering you are agreeing to our
+          <a href="#" class="terms">terms and conditions</a></p>
       </div>
 
       <!-- Register steps -->
@@ -108,7 +109,7 @@
                     </div>
                   </label>
 
-                    <input type="submit" name="" value="Continue" class="continue button" tabindex="-1">
+                    <input type="submit" name="" value="Continue" class="continue button"  >
                   </form>
               </div>
 
@@ -119,12 +120,12 @@
             <div class="reg-step2 reg_step">
               <div class="form-box">
                 <div class="progressbar probar2"></div>
-                <form id="step2_form" novalidate="novalidate" tabindex="-1">
+                <form id="step2_form" novalidate="novalidate">
                   <h3>Professional information</h3>
 
                   <label for="">
                     <p>Choose profession</p>
-                    <select name="profession" required="required" id="profession" tabindex="-1">
+                    <select name="profession" required="required" id="profession">
                     <option value="" selected disabled  >...</option>
                       <option value="Doctor"  >Doctor</option>
                       <option value="Surgeon"  >Surgeon</option>
@@ -145,7 +146,7 @@
 
                   <label for="">
                     <p>Speciality</p>
-                     <input type="text" name="speciality" required="required" tabindex="-1">
+                     <input type="text" name="speciality" required="required"  >
 
                      <a href="#" id="qmark_link">
                        <div class="qmark">
@@ -162,7 +163,8 @@
 
                   <label for="">
                     <p>Workplace</p>
-                    <input type="text" name="workplace" required="required" tabindex="-1">
+                    <input type="text" name="workplace" required="required">
+
                     <a href="#" id="qmark_link">
                       <div class="qmark">
                         <div class="qtext_div">
@@ -177,7 +179,7 @@
 
                   <label for="">
                     <p>City</p>
-                    <select name="city" required="required" id="city" tabindex="-1">
+                    <select name="city" required="required" id="city">
                       <option value="" selected disabled hidden>...</option>
                       <option value="Stockholm">Stockholm</option>
                       <option value="Göteborg">Göteborg</option>
@@ -196,11 +198,11 @@
                     </div>
                   </label>
 
-                  <a href="#" class="previous button" tabindex="-1">
+                  <a href="#" class="previous button">
                     Previous
                   </a>
 
-                  <input type="submit" name="" value="Register" class="register button" tabindex="-1">
+                  <input type="submit" name="" value="Register" class="register button">
                 </form >
               </div>
             </div>
@@ -208,11 +210,14 @@
 
           <!-- Step 3 -->
           <div class="step3 reg_step">
+
             <div class="form-box">
               <div class="progressbar probar3"></div>
+
               <h3 class="now_registered">You are now registered!</h3>
-              <a href="index2.html" class="go_to_home button" tabindex="-1">Go to Home page</a>
-              <a href="#"class="go_to_profile button" tabindex="-1">Go to your profile</a>
+              <a href="index2.html" class="go_to_home button">Go to Home page</a>
+
+              <a href="#"class="go_to_profile button"  >Go to your profile</a>
             </div>
           </div>
         </div>
