--- a/Interaction project/register.html
+++ b/Interaction project/register.html
@@ -12,6 +12,7 @@
   <body>
     <header>
       <div class="menu">
+        <div class="arrow"><a href="index.html"><img src="img/arrow.png"></a></div>
         <div class="logo">
           <h1 class="logosmall">
             <a href="index.html">Pharm inc.</a>
@@ -27,7 +28,7 @@
       <div class="registerinfo">
         <h2>Register</h2>
         <p>To register on Pharmaceutical inc. we are going to need your personal information. This information will be used to validate you in our database. Your information will not be used in any commercial purposes or be passed on to other parties. By registering you are agreeing to our
-          <a href="#" class="terms">terms and conditions</a></p>
+          <a href="#" class="terms">terms and conditions</a>.</p>
       </div>
 
       <!-- Register steps -->
